# TriPR-ABSA

./: .gitignore  AUTHORS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: method.md  reproducibility.md  results.md
models/: gnn_transformer.py  parallel_gt.py  text_gin.py  text_gt.py  text_gt_bert.py  text_tg.py  text_transformer.py  transformer_gnn.py
pragmatic_residual/: __init__.py  apply.py  comparison.py  fact.py  features.py  intensity.py
results/: reported_metrics.json
scripts/: build_phrase_prior.py  visualize_results.py
tests/: test_apply.py  test_assets.py  test_comparison.py  test_docs.py  test_fact.py  test_features.py  test_intensity.py  test_prior_builder.py  test_release_hygiene.py  test_results.py  test_upstream_smoke.py  test_visualization.py
tests/fixtures/: prior.json  train.json
